--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<hr class="my-4" />
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 col-sm-4">
+				<div class="col-md-4">
 					<div class="card" style="width: 18rem;">
 						<img class="card-img-top" src="img/graphic-design.png" alt="Card image cap">
 						<div class="card-body">
@@ -101,7 +101,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4">
+				<div class="col-md-4">
 					<div class="card" style="width: 18rem;">
 						<img class="card-img-top" src="img/3d_design.png" alt="Card image cap">
 						<div class="card-body">
@@ -111,7 +111,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4">
+				<div class="col-md-4">
 					<div class="card" style="width: 18rem;">
 						<img class="card-img-top" src="img/logo_design.png" alt="Card image cap">
 						<div class="card-body">
